<resources>
    <string name="app_name">投票票</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="shr_hint_username">账号</string>
    <string name="shr_hint_password">密码</string>
    <string name="shr_hint_password1">确认密码</string>
    <string name="textView2">账号注册</string>
    <string name="vote_title">Title</string>
    <string name="vote_description">Secondary text</string>
    <string name="vote_head_text">投票项目</string>
    <string name="vote_result_submit">提交</string>
</resources>
